# ICT2104

./: CMakeLists.txt  README.md  plot.py
2104_Project/: CMakeLists.txt  Nav_Map.c  barcode.c  barcode.h  blink.c  comms.h  comms_i2c.c  comms_uart.c  encoder.c  encoder.h  i2c.c  main.c  mapping.c  mapping.h  motor.c  motor.h  mpu.c  mpu.h  uart.c  ultrasonic.c  ultrasonic.h
Communications/Code/: comms_i2c.c
IR & Encoder/: barcode.h  encoder.c  encoder.h
Individual Sub-modules/Communications/Code/: comms.h  comms_bb.c  comms_i2c.c
Individual Sub-modules/IR & Encoder/: barcode.c  encoder.c  main.c
Individual Sub-modules/Mapping&Navigation/Mapping/: mapping.c  mapping.h
Individual Sub-modules/Motor/: motor.c  motor.h
Individual Sub-modules/Ultrasonic & Accelerometer/: 2104 Sensor Demo Slides .pptx  README.md  mpu.c  mpu.h
Integrated/: README.md
Integrated/2104_Project/: CMakeLists.txt  barcode.c  barcode.h  comms_uart.c  main.c  mapping.c  mpu.c  ultrasonic.c
Mapping/: CMakeLists.txt  Nav_Map.c  checkNode.c  mapping.c
Mapping&Navigation/Mapping/: Nav_Map.c  mapping.c
m5stickc-plus/i2c/: i2c.ino
m5stickc-plus/uart/: uart.ino
